02-orquestadores/dia4/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld
  labels:
    name: helloworld
  annotations: 
    nginx.requires.https: "true"
spec:
  rules:
  - host: demo.lemoncoder.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: helloworld
            port: 
              number: 80
